// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button when no props other than children are passed into the component renders the default props and children to match the snapshot 1`] = `
<Button
  as="secondary"
  disabled={false}
  forwardRef={null}
  iconPosition="before"
  size="medium"
  subtext=""
  theme="blue"
>
  foo
</Button>
`;

exports[`Button when only the "iconPosition" and "iconType" props are passed into the component renders the default props and children to match the snapshot with the Icon after children 1`] = `
.c3 {
  display: inline-block;
  position: relative;
  color: rgba(0,0,0,0.65);
  background-color: transparent;
}

.c3:hover {
  color: rgba(0,0,0,0.90);
  background-color: transparent;
}

.c3::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e928";
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
}

.c4 .c2 {
  color: #255bc7;
}

.c4:active .c2 {
  color: #255bc7;
}

.c4:hover .c2 {
  color: #ffffff;
}

.c4:focus .c2 {
  color: #ffffff;
}

.c4 + .c0 {
  margin-left: 15px;
}

.c4 .c2 {
  margin-left: 8px;
  margin-right: 0px;
  height: 20px;
}

.c5 .c2 {
  color: #255bc7;
}

.c5:active .c2 {
  color: #255bc7;
}

.c5:hover .c2 {
  color: #ffffff;
}

.c5:focus .c2 {
  color: #ffffff;
}

.c5 + .c0 {
  margin-left: 15px;
}

.c5 .c2 {
  margin-left: 8px;
  margin-right: 0px;
  height: 22px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c6:hover .c2 {
  color: #FFFFFF;
}

.c6 .c2 {
  margin-left: 0px;
  margin-right: 8px;
  height: 18px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  border-color: #26A826;
  color: #26A826;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c1:focus {
  outline: solid 3px #FFB500;
}

.c1 + .c0 {
  margin-left: 16px;
}

.c1:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c1:hover .c2 {
  color: #FFFFFF;
}

.c1 .c2 {
  margin-left: 8px;
  margin-right: 0px;
  height: 18px;
}

<button
  className="c0 c1"
  data-component="button"
  disabled={false}
  role="button"
  size="medium"
>
  <span>
    <span
      data-element="main-text"
    >
      foo
    </span>
  </span>
  <span
    className="c2 c3"
    data-component="icon"
    data-element="filter"
    disabled={false}
    fontSize="small"
    type="filter"
  />
</button>
`;

exports[`Button when only the "iconPosition" and "iconType" props are passed into the component renders the default props and children to match the snapshot with the Icon before children 1`] = `
.c3 {
  display: inline-block;
  position: relative;
  color: rgba(0,0,0,0.65);
  background-color: transparent;
}

.c3:hover {
  color: rgba(0,0,0,0.90);
  background-color: transparent;
}

.c3::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e928";
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
}

.c4 .c2 {
  color: #255bc7;
}

.c4:active .c2 {
  color: #255bc7;
}

.c4:hover .c2 {
  color: #ffffff;
}

.c4:focus .c2 {
  color: #ffffff;
}

.c4 + .c0 {
  margin-left: 15px;
}

.c4 .c2 {
  margin-left: 8px;
  margin-right: 0px;
  height: 20px;
}

.c5 .c2 {
  color: #255bc7;
}

.c5:active .c2 {
  color: #255bc7;
}

.c5:hover .c2 {
  color: #ffffff;
}

.c5:focus .c2 {
  color: #ffffff;
}

.c5 + .c0 {
  margin-left: 15px;
}

.c5 .c2 {
  margin-left: 8px;
  margin-right: 0px;
  height: 22px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  border-color: #26A826;
  color: #26A826;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c1:focus {
  outline: solid 3px #FFB500;
}

.c1 + .c0 {
  margin-left: 16px;
}

.c1:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c1:hover .c2 {
  color: #FFFFFF;
}

.c1 .c2 {
  margin-left: 0px;
  margin-right: 8px;
  height: 18px;
}

<button
  className="c0 c1"
  data-component="button"
  disabled={false}
  role="button"
  size="medium"
>
  <span
    className="c2 c3"
    data-component="icon"
    data-element="filter"
    disabled={false}
    fontSize="small"
    type="filter"
  />
  <span>
    <span
      data-element="main-text"
    >
      foo
    </span>
  </span>
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "blue" matches the snapshot when default props are passed 1`] = `
.c2 + .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .c20 {
  color: #255bc7;
}

.c1:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c1:active .c20 {
  color: #255bc7;
}

.c1:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:hover .c20 {
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:focus .c20 {
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .c20 {
  margin-left: 8px;
  margin-right: 0px;
  height: 22px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "grey" matches the snapshot when default props are passed 1`] = `
.c2 + .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .c20 {
  color: #255bc7;
}

.c1:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c1:active .c20 {
  color: #255bc7;
}

.c1:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:hover .c20 {
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:focus .c20 {
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .c20 {
  margin-left: 8px;
  margin-right: 0px;
  height: 22px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "magenta" matches the snapshot when default props are passed 1`] = `
.c2 + .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .c20 {
  color: #255bc7;
}

.c1:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c1:active .c20 {
  color: #255bc7;
}

.c1:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:hover .c20 {
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:focus .c20 {
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .c20 {
  margin-left: 8px;
  margin-right: 0px;
  height: 22px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "magenta-dull" matches the snapshot when default props are passed 1`] = `
.c2 + .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .c20 {
  color: #255bc7;
}

.c1:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c1:active .c20 {
  color: #255bc7;
}

.c1:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:hover .c20 {
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:focus .c20 {
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .c20 {
  margin-left: 8px;
  margin-right: 0px;
  height: 22px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "red" matches the snapshot when default props are passed 1`] = `
.c2 + .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .c20 {
  color: #255bc7;
}

.c1:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c1:active .c20 {
  color: #255bc7;
}

.c1:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:hover .c20 {
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:focus .c20 {
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .c20 {
  margin-left: 8px;
  margin-right: 0px;
  height: 22px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "white" matches the snapshot when default props are passed 1`] = `
.c2 + .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .c20 {
  color: #255bc7;
}

.c1:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c1:active .c20 {
  color: #255bc7;
}

.c1:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:hover .c20 {
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:focus .c20 {
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .c20 {
  margin-left: 8px;
  margin-right: 0px;
  height: 22px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "blue" matches the snapshot with the default props 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  border-radius: 0;
  font-size: 14px;
  height: 43px;
  line-height: 16px;
  margin-left: 0;
  margin-right: 0;
  padding: 0 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .c20 {
  color: #255bc7;
}

.c1:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c1:active .c20 {
  color: #255bc7;
}

.c1:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:hover .c20 {
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:focus .c20 {
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .c20 {
  margin-left: 8px;
  margin-right: 0px;
  height: 20px;
}

.c2 + .c0 {
  margin-left: 15px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
  size="large"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "grey" matches the snapshot with the default props 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  border-radius: 0;
  font-size: 14px;
  height: 43px;
  line-height: 16px;
  margin-left: 0;
  margin-right: 0;
  padding: 0 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .c20 {
  color: #255bc7;
}

.c1:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c1:active .c20 {
  color: #255bc7;
}

.c1:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:hover .c20 {
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:focus .c20 {
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .c20 {
  margin-left: 8px;
  margin-right: 0px;
  height: 20px;
}

.c2 + .c0 {
  margin-left: 15px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
  size="large"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "magenta" matches the snapshot with the default props 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  border-radius: 0;
  font-size: 14px;
  height: 43px;
  line-height: 16px;
  margin-left: 0;
  margin-right: 0;
  padding: 0 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .c20 {
  color: #255bc7;
}

.c1:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c1:active .c20 {
  color: #255bc7;
}

.c1:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:hover .c20 {
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:focus .c20 {
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .c20 {
  margin-left: 8px;
  margin-right: 0px;
  height: 20px;
}

.c2 + .c0 {
  margin-left: 15px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
  size="large"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "magenta-dull" matches the snapshot with the default props 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  border-radius: 0;
  font-size: 14px;
  height: 43px;
  line-height: 16px;
  margin-left: 0;
  margin-right: 0;
  padding: 0 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .c20 {
  color: #255bc7;
}

.c1:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c1:active .c20 {
  color: #255bc7;
}

.c1:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:hover .c20 {
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:focus .c20 {
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .c20 {
  margin-left: 8px;
  margin-right: 0px;
  height: 20px;
}

.c2 + .c0 {
  margin-left: 15px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
  size="large"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "red" matches the snapshot with the default props 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  border-radius: 0;
  font-size: 14px;
  height: 43px;
  line-height: 16px;
  margin-left: 0;
  margin-right: 0;
  padding: 0 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .c20 {
  color: #255bc7;
}

.c1:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c1:active .c20 {
  color: #255bc7;
}

.c1:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:hover .c20 {
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:focus .c20 {
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .c20 {
  margin-left: 8px;
  margin-right: 0px;
  height: 20px;
}

.c2 + .c0 {
  margin-left: 15px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
  size="large"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "white" matches the snapshot with the default props 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  border-radius: 0;
  font-size: 14px;
  height: 43px;
  line-height: 16px;
  margin-left: 0;
  margin-right: 0;
  padding: 0 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .c20 {
  color: #255bc7;
}

.c1:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c1:active .c20 {
  color: #255bc7;
}

.c1:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:hover .c20 {
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c1:focus .c20 {
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .c20 {
  margin-left: 8px;
  margin-right: 0px;
  height: 20px;
}

.c2 + .c0 {
  margin-left: 15px;
}

.c3 + .c0 {
  margin-left: 16px;
}

.c4 + .c0 {
  margin-left: 16px;
}

.c5 + .c0 {
  margin-left: 16px;
}

.c6 + .c0 {
  margin-left: 16px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
  size="large"
>
  Foo
</button>
`;
